spotless
Signed-off-by: Michael Tinker <michael.tinker@swirldslabs.com>